[PDI-12237]: Externalized strings for i18n

--- a/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
@@ -1,7 +1,44 @@
+# Plugin messages
+TeraDataBulkLoader.Log.OpeningPipe=Opening FIFO pipe {0} for writing
+TeraDataBulkLoader.Log.CreatePipe=Creating FIFO file using this command\: {0}
+TeraDataBulkLoader.Log.SetPipePermissions=Setting FIFO file permissions using this command\: {0}
+TeraDataBulkLoader.Exception.CommandReturnCodeError=Return code {0} received from statement\: {1}
+TeraDataBulkLoader.Log.RunCommand=Running tbuild command\: {0}
+TeraDataBulkLoader.Log.Environment=Environment\: {0}
+TeraDataBulkLoader.Log.WaitForTBuild=Waiting up to {0} for the tbuild command thread to finish processing
+TeraDataBulkLoader.Log.UnsupportedType=This is seen when a type in the PDI stream is not handled by the step. Type is {0}
+TeraDataBulkLoader.Log.ErrorDuringWrite=IOException writing to fifo. Waiting up to {0} for the tbuild command thread to return with the error.
+TeraDataBulkLoader.Log.LoadexError=Caught Loadex error\: {0}
+TeraDataBulkLoader.Log.IOError=Caught IO error (pipe?)
+TeraDataBulkLoader.Log.UnknownError=Caught some error
+TeraDataBulkLoader.Log.CannotDeletePipe=Unable to delete FIFO file\: {0} 
+TeraDataBulkLoader.Log.CloseConnectionError=Unexpected error encountered while closing the client connection
+TeraDataBulkLoader.Exception.UnsupportedType=Unsupported type in stream\: {0}
+TeraDataBulkLoader.Exception.BuildPathNotSet=tbuild path not set
+TeraDataBulkLoader.Exception.ErrorBuildAppString=Error retrieving tbuild application string
+TeraDataBulkLoader.Exception.TBuildProcessError=Tbuild process exited with code {0}\n{1}
+TeraDataBulkLoader.Exception.IOError=IO Error serializing rows of data to the FIFO file
+TeraDataBulkLoader.Exception.UnknownError=Error serializing rows of data to the FIFO file
+
+# Meta class messages
 TeraDataBulkLoaderMeta.TbuildClientRoot=/opt/teradata/client/14.00
+TeraDataBulkLoaderMeta.Exception.UnhandledType=Unhandled type in stream
+TeraDataBulkLoaderMeta.Exception.TableNotFound=The table was not found
+TeraDataBulkLoaderMeta.Exception.TableNotSpecified=No table specified
+TeraDataBulkLoaderMeta.Exception.ErrorGettingFields=Error in getting the fields
+TeraDataBulkLoaderMeta.Exception.ConnectionNotDefined=No connection defined
+TeraDataBulkLoaderMeta.Exception.OpenScriptFile=Cannot open script file at path={0}
+TeraDataBulkLoaderMeta.HiddenPassword=*** password hidden in preview ***
+TeraDataBulkLoaderMeta.NoInputStream=No input stream - disabled hop?
+TeraDataBulkLoaderMeta.Exception.ErrorGettingFields=There was an error getting the columns from the table
+TeraDataBulkLoaderMeta.Exception.CannotFindFieldInInput=Unable to find field {0} in the input rows
+
+# Dialog messages
+TeraDataBulkLoaderDialog.Log.GettingKeyInfo=getting key info...
+TeraDataBulkLoaderDialog.Log.FoundFields=Found {0} fields
 TeraDataBulkLoaderDialog.TargetTable.Label=Target table\: 
 TeraDataBulkLoaderDialog.FifoFile.Label=FIFO File
-TeraDataBulkLoaderDialog.DoMapping.SomeSourceFieldsNotFound=Some source fields where not found\: {0}
+TeraDataBulkLoaderDialog.DoMapping.SomeSourceFieldsNotFound=Some source fields were not found\: {0}
 TeraDataBulkLoaderDialog.FailedToGetFields.DialogTitle=Fields failure
 TeraDataBulkLoaderDialog.Stepname.Label=Step name 
 TeraDataBulkLoaderDialog.TargetSchema.Label=Target Schema\:
@@ -21,6 +58,7 @@ TeraDataBulkLoaderDialog.ScriptOptionUseExisting.Label=Use Existing
 TeraDataBulkLoaderDialog.Insert.Label=Insert
 TeraDataBulkLoaderDialog.Upsert.Label=Upsert
 TeraDataBulkLoaderDialog.Preview.Button=Preview Script
+TeraDataBulkLoaderDialog.Preview.MessageBoxTitle=Preview
 TeraDataBulkLoaderDialog.Script.Name=PDI_Step_Job
 TeraDataBulkLoaderDialog.Script.Description=Auto-generated Script
 
@@ -28,7 +66,6 @@ TeraDataBulkLoaderDialog.UseSchema.Label=Use Existing Load Script
 TeraDataBulkLoaderDialog.SubstituteControlFile.Label=Substitute Kettle Variables in Control File?
 TeraDataBulkLoaderDialog.VariableFile.Label=Tbuild Variable File\:
 TeraDataBulkLoaderDialog.SubstituteVariableFile.Label=Substitute Kettle Variables in Variable File?
-
 
 TeraDataBulkLoaderDialog.ErrLimit.Label=Error limit\:
 TeraDataBulkLoaderDialog.TruncateTable.Label=Truncate table\:
@@ -46,6 +83,7 @@ TeraDataBulkLoaderDialog.UseControlFile.Label=Use control file\:
 TeraDataBulkLoaderDialog.DoMapping.UnableToFindTargetFields.Message=Unable to find target fields\!
 TeraDataBulkLoaderDialog.GetFields.Label=Get fields
 TeraDataBulkLoaderDialog.FailedToGetFields.DialogMessage=Failed to get fields\!
+TeraDataBulkLoaderDialog.FieldTableLength=Field table has length {0}
 
 TeraDataBulkLoader.Log.ErrorInStep=Error in step\:
 TeraDataBulkLoaderDialog.Shell.Title=Teradata TPT Insert Upsert Bulk Loader
@@ -92,8 +130,3 @@ TeraDataBulkLoaderDialog.MissingInstallPath.DialogMessage=TeraData Client instal
 TeraDataBulkLoaderDialog.DoMapping.SomeTargetFieldsNotFound=Some fields in the stream were not found in the table
 TeraDataBulkLoaderDialog.DoMapping.SomeTargetFieldsNotFound=Some fields in the table were not found in the stream
 TeraDataBulkLoaderDialog.DoMapping.SomeFieldsNotFound=Click OK to continue mapping....
-TeraDataBulkLoaderMeta.Exception.ErrorGettingFields=There was an error getting the columns from the table
-TeraDataBulkLoaderMeta.Exception.TableNotFound=The table was not found
-TeraDataBulkLoaderMeta.Exception.TableNotSpecified=No table specified
-TeraDataBulkLoaderMeta.Exception.ErrorGettingFields=Error in getting the fields
-TeraDataBulkLoaderMeta.Exception.ConnectionNotDefined=No connection defined
