--- a/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
@@ -40,19 +40,20 @@ TeraDataBulkLoaderDialog.TargetTable.Label=Target table\:
 TeraDataBulkLoaderDialog.FifoFile.Label=FIFO File
 TeraDataBulkLoaderDialog.DoMapping.SomeSourceFieldsNotFound=Some source fields were not found\: {0}
 TeraDataBulkLoaderDialog.FailedToGetFields.DialogTitle=Fields failure
-TeraDataBulkLoaderDialog.Stepname.Label=Step name 
+TeraDataBulkLoaderDialog.Stepname.Label=Step name\: 
+TeraDataBulkLoaderDialog.Connection.Label=Connection\: 
 TeraDataBulkLoaderDialog.TargetSchema.Label=Target Schema\:
-TeraDataBulkLoaderDialog.LogTable.Label=Restart Log Table
-TeraDataBulkLoaderDialog.WorkTable.Label=Work Table
-TeraDataBulkLoaderDialog.ErrorTable.Label=Error Table
-TeraDataBulkLoaderDialog.ErrorTable2.Label=Uniqueness Violation Error Table
+TeraDataBulkLoaderDialog.LogTable.Label=Restart Log Table\:
+TeraDataBulkLoaderDialog.WorkTable.Label=Work Table\:
+TeraDataBulkLoaderDialog.ErrorTable.Label=Error Table\:
+TeraDataBulkLoaderDialog.ErrorTable2.Label=Uniqueness Violation Error Table\:
 TeraDataBulkLoaderDialog.AccessLogFile.Label=Access Log File\:
 TeraDataBulkLoaderDialog.UpdateLogFile.Label=Update Log File\:
 TeraDataBulkLoaderDialog.ScriptFile.Label=Generated Script File\:
-TeraDataBulkLoaderDialog.ActionType.Label=Method of Loading\:
+TeraDataBulkLoaderDialog.ActionType.Label=Loading Method\:
 TeraDataBulkLoaderDialog.UpdateKey.Label=Upsert Condition\:
 TeraDataBulkLoaderDialog.GenerateSchema.Label=Generated Script Options
-TeraDataBulkLoaderDialog.ScriptOption.Label=Generate Load Script or Use Existing 
+TeraDataBulkLoaderDialog.ScriptOption.Label=Job Script\: 
 TeraDataBulkLoaderDialog.ScriptOptionGenerate.Label=Generate Automatically
 TeraDataBulkLoaderDialog.ScriptOptionUseExisting.Label=Use Existing
 TeraDataBulkLoaderDialog.Insert.Label=Insert
@@ -63,23 +64,24 @@ TeraDataBulkLoaderDialog.Script.Name=PDI_Step_Job
 TeraDataBulkLoaderDialog.Script.Description=Auto-generated Script
 
 TeraDataBulkLoaderDialog.UseSchema.Label=Use Existing Load Script
-TeraDataBulkLoaderDialog.SubstituteControlFile.Label=Substitute Kettle Variables in Control File?
+TeraDataBulkLoaderDialog.SubstituteControlFile.Label=Substitute Kettle Variables in Control File\:
 TeraDataBulkLoaderDialog.VariableFile.Label=Tbuild Variable File\:
 TeraDataBulkLoaderDialog.SubstituteVariableFile.Label=Substitute Kettle Variables in Variable File?
 
 TeraDataBulkLoaderDialog.ErrLimit.Label=Error limit\:
 TeraDataBulkLoaderDialog.TruncateTable.Label=Truncate table\:
-TeraDataBulkLoaderDialog.ControlFile.Label=Control file\:
+TeraDataBulkLoaderDialog.ControlFile.Label=Control File\:
 TeraDataBulkLoaderDialog.VariableSubstitution.Label=Variable Substitution in control file\:
 TeraDataBulkLoaderDialog.Filetype.All=All files (*.*)
 TeraDataBulkLoaderDialog.EditMapping.Label=Mapping
-TeraDataBulkLoaderDialog.ColumnInfo.StreamField=Stream field
-TeraDataBulkLoaderDialog.ColumnInfo.TableField=Table field
+TeraDataBulkLoaderDialog.ColumnInfo.StreamField=Stream Field
+TeraDataBulkLoaderDialog.ColumnInfo.TableField=Table Field
 TeraDataBulkLoaderDialog.ColumnInfo.Comparator=Comparator
-TeraDataBulkLoaderDialog.ColumnInfo.UpdateField=update
+TeraDataBulkLoaderDialog.ColumnInfo.UpdateField=Update
 TeraDataBulkLoaderDialog.GetFields.Button=Get Fields
 TeraDataBulkLoaderDialog.LogFile.Label=Error Log\:
 TeraDataBulkLoaderDialog.UseControlFile.Label=Use control file\:
+TeraDataBulkLoaderDialog.DoMapping.UnableToFindTargetFields.Title=Error
 TeraDataBulkLoaderDialog.DoMapping.UnableToFindTargetFields.Message=Unable to find target fields\!
 TeraDataBulkLoaderDialog.GetFields.Label=Get fields
 TeraDataBulkLoaderDialog.FailedToGetFields.DialogMessage=Failed to get fields\!
@@ -94,27 +96,29 @@ TeraDataBulkLoaderDialog.Browse.Button=Browse...
 TeraDataBulkLoaderDialog.DropTables.Label=Drop Tables Before Load\:
 
 TeraDataBulkLoaderDialog.RowHandling.Label=Update Rows Handling Options\:
-TeraDataBulkLoaderDialog.IgnoreDupUpdate.Label=IGNORE DUPLICATE
-TeraDataBulkLoaderDialog.InsertMissingUpdate.Label=INSERT FOR MISSING
-TeraDataBulkLoaderDialog.IgnoreMissing.Label=IGNORE MISSING
+TeraDataBulkLoaderDialog.IgnoreDupUpdate.Label=Ignore Duplicate
+TeraDataBulkLoaderDialog.InsertMissingUpdate.Label=Insert For Missing
+TeraDataBulkLoaderDialog.IgnoreMissing.Label=Ignore Missing
 # Folder tabs
 TeraDataBulkLoaderDialog.ScriptTab.Label=Existing Job Script File Options
-TeraDataBulkLoaderDialog.ExecutionTab.Label=Tbuild Execution Environment Options
-TeraDataBulkLoaderDialog.GenerateScriptControlTab.Label=Generated Script Control Options
-TeraDataBulkLoaderDialog.GenerateScriptFieldsTab.Label=Load/Update Keys and Fields
+TeraDataBulkLoaderDialog.ExecutionTab.Label=General
+TeraDataBulkLoaderDialog.GenerateScriptControlTab.Label=Job Script Options
+TeraDataBulkLoaderDialog.GenerateScriptFieldsTab.Label=Keys and Fields
 TeraDataBulkLoaderDialog.GenScriptControlItemsDisable.Label=These items are disabled as "Use Existing Script" is selected
 TeraDataBulkLoaderDialog.GenScriptFieldsDisable.Label=These items are disabled as "Use Existing Script" is selected
 TeraDataBulkLoaderDialog.ControlFileDisable.Label=These items are disabled as "Generate Script" is selected
 # Execution Options
-TeraDataBulkLoaderDialog.TdInstall.Label=Location of TeraData client installation\:
-TeraDataBulkLoaderDialog.TwbRoot.Label=TWB_ROOT (Location/tbuild)\:
-TeraDataBulkLoaderDialog.TDLibPath.Label=Path to Teradata libs (Location/lib)\:
-TeraDataBulkLoaderDialog.TbuildLibPath.Label=Path to tbuild libs (defaults to $TWB_ROOT/lib)\:
-TeraDataBulkLoaderDialog.TdicuLibPath.Label=Path to tdicu libs (defaults to Location/tdicu/lib)\:
-TeraDataBulkLoaderDialog.CopLibPath.Label=Path to COPLIB and COPERR (defaults to Location/lib)\:
-TeraDataBulkLoaderDialog.DataFile.Label=FIFO base filename\:
-TeraDataBulkLoaderDialog.JobName.Label=Job Name (passed to tbuild)\:
-TeraDataBulkLoaderDialog.TbuildPath.Label=Path to tbuild executable (defaults to $TWB_ROOT/bin/tbuild)\:
+TeraDataBulkLoaderDialog.LocationGroup.Label=Locations
+TeraDataBulkLoaderDialog.OtherGroup.Label=Other
+TeraDataBulkLoaderDialog.TdInstall.Label=TeraData Client Installation\:
+TeraDataBulkLoaderDialog.TwbRoot.Label=TWB_ROOT\:
+TeraDataBulkLoaderDialog.TDLibPath.Label=Teradata Libs\:
+TeraDataBulkLoaderDialog.TbuildLibPath.Label=Tbuild Libs\:
+TeraDataBulkLoaderDialog.TdicuLibPath.Label=TDICU libs\:
+TeraDataBulkLoaderDialog.CopLibPath.Label=COPLIB and COPERR\:
+TeraDataBulkLoaderDialog.DataFile.Label=FIFO Base Filename\:
+TeraDataBulkLoaderDialog.JobName.Label=Job Name\:
+TeraDataBulkLoaderDialog.TbuildPath.Label=Tbuild Executable\:
 
 # Errors for missing required fields
 TeraDataBulkLoaderDialog.MissingRequiredTitle.DialogMessage=Missing Required Fields for this Step
