--- a/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
@@ -19,6 +19,7 @@ TeraDataBulkLoader.Exception.ErrorBuildAppString=Error retrieving tbuild applica
 TeraDataBulkLoader.Exception.TBuildProcessError=Tbuild process exited with code {0}\n{1}
 TeraDataBulkLoader.Exception.IOError=IO Error serializing rows of data to the FIFO file
 TeraDataBulkLoader.Exception.UnknownError=Error serializing rows of data to the FIFO file
+TeraDataBulkLoaderMeta.Exception.UnableToSaveStepInfoToRepository=Unable to save to repository
 
 # Meta class messages
 TeraDataBulkLoaderMeta.TbuildClientRoot=/opt/teradata/client/14.00
