[PDI-12188] - Implementing changes from ux review

--- a/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
@@ -37,20 +37,25 @@ TeraDataBulkLoaderMeta.Exception.CannotFindFieldInInput=Unable to find field {0}
 # Dialog messages
 TeraDataBulkLoaderDialog.Log.GettingKeyInfo=getting key info...
 TeraDataBulkLoaderDialog.Log.FoundFields=Found {0} fields
-TeraDataBulkLoaderDialog.TargetTable.Label=Target table\: 
+TeraDataBulkLoaderDialog.TargetTable.Label=Target Table\: 
 TeraDataBulkLoaderDialog.FifoFile.Label=FIFO File
 TeraDataBulkLoaderDialog.DoMapping.SomeSourceFieldsNotFound=Some source fields were not found\: {0}
 TeraDataBulkLoaderDialog.FailedToGetFields.DialogTitle=Fields failure
-TeraDataBulkLoaderDialog.Stepname.Label=Step name\: 
+TeraDataBulkLoaderDialog.Stepname.Label=Step Name\: 
 TeraDataBulkLoaderDialog.Connection.Label=Connection\: 
 TeraDataBulkLoaderDialog.TargetSchema.Label=Target Schema\:
-TeraDataBulkLoaderDialog.LogTable.Label=Restart Log Table\:
-TeraDataBulkLoaderDialog.WorkTable.Label=Work Table\:
-TeraDataBulkLoaderDialog.ErrorTable.Label=Error Table\:
-TeraDataBulkLoaderDialog.ErrorTable2.Label=Uniqueness Violation Error Table\:
+TeraDataBulkLoaderDialog.LogTable.Label=Restart Log Table
+TeraDataBulkLoaderDialog.LogTablePrompt.Label=Restart Log Table\:
+TeraDataBulkLoaderDialog.WorkTable.Label=Work Table
+TeraDataBulkLoaderDialog.WorkTablePrompt.Label=Work Table\:
+TeraDataBulkLoaderDialog.ErrorTable.Label=Error Table
+TeraDataBulkLoaderDialog.ErrorTablePrompt.Label=Error Table\:
+TeraDataBulkLoaderDialog.ErrorTable2.Label=Uniqueness Violation Error Table
+TeraDataBulkLoaderDialog.ErrorTable2Prompt.Label=Uniqueness Violation Error Table\:
+TeraDataBulkLoaderDialog.LogFiles.Label=Log Files
 TeraDataBulkLoaderDialog.AccessLogFile.Label=Access Log File\:
 TeraDataBulkLoaderDialog.UpdateLogFile.Label=Update Log File\:
-TeraDataBulkLoaderDialog.ScriptFile.Label=Generated Script File\:
+TeraDataBulkLoaderDialog.ScriptFile.Label=Generated Script File Name\:
 TeraDataBulkLoaderDialog.ActionType.Label=Loading Method\:
 TeraDataBulkLoaderDialog.UpdateKey.Label=Upsert Condition\:
 TeraDataBulkLoaderDialog.GenerateSchema.Label=Generated Script Options
@@ -84,26 +89,26 @@ TeraDataBulkLoaderDialog.LogFile.Label=Error Log\:
 TeraDataBulkLoaderDialog.UseControlFile.Label=Use control file\:
 TeraDataBulkLoaderDialog.DoMapping.UnableToFindTargetFields.Title=Error
 TeraDataBulkLoaderDialog.DoMapping.UnableToFindTargetFields.Message=Unable to find target fields\!
-TeraDataBulkLoaderDialog.GetFields.Label=Get fields
+TeraDataBulkLoaderDialog.GetFields.Label=Get Fields
 TeraDataBulkLoaderDialog.FailedToGetFields.DialogMessage=Failed to get fields\!
 TeraDataBulkLoaderDialog.FieldTableLength=Field table has length {0}
 
 TeraDataBulkLoader.Log.ErrorInStep=Error in step\:
 TeraDataBulkLoaderDialog.Shell.Title=Teradata TPT Insert Upsert Bulk Loader
-TeraDataBulkLoaderDialog.Keys.Label=The key(s) to look up in the value(s)\:
-TeraDataBulkLoaderDialog.Fields.Label=Fields to load\:
+TeraDataBulkLoaderDialog.Keys.Label=The Key(s) To Look Up In The Value(s)\:
+TeraDataBulkLoaderDialog.Fields.Label=Fields To Load\:
 
 TeraDataBulkLoaderDialog.Browse.Button=Browse...
-TeraDataBulkLoaderDialog.DropTables.Label=Drop Tables Before Load\:
+TeraDataBulkLoaderDialog.DropTables.Label=Drop Tables Before Loading
 
-TeraDataBulkLoaderDialog.RowHandling.Label=Update Rows Handling Options\:
+TeraDataBulkLoaderDialog.RowHandling.Label=Update Rows Handling Options
 TeraDataBulkLoaderDialog.IgnoreDupUpdate.Label=Ignore Duplicate
 TeraDataBulkLoaderDialog.InsertMissingUpdate.Label=Insert For Missing
 TeraDataBulkLoaderDialog.IgnoreMissing.Label=Ignore Missing
 # Folder tabs
-TeraDataBulkLoaderDialog.ScriptTab.Label=Existing Job Script File Options
+TeraDataBulkLoaderDialog.ScriptTab.Label=Job Script File
 TeraDataBulkLoaderDialog.ExecutionTab.Label=General
-TeraDataBulkLoaderDialog.GenerateScriptControlTab.Label=Job Script Options
+TeraDataBulkLoaderDialog.GenerateScriptControlTab.Label=Job Script
 TeraDataBulkLoaderDialog.GenerateScriptFieldsTab.Label=Keys and Fields
 TeraDataBulkLoaderDialog.GenScriptControlItemsDisable.Label=These items are disabled as "Use Existing Script" is selected
 TeraDataBulkLoaderDialog.GenScriptFieldsDisable.Label=These items are disabled as "Use Existing Script" is selected
@@ -115,7 +120,7 @@ TeraDataBulkLoaderDialog.TdInstall.Label=TeraData Client Installation\:
 TeraDataBulkLoaderDialog.TwbRoot.Label=TWB_ROOT\:
 TeraDataBulkLoaderDialog.TDLibPath.Label=Teradata Libs\:
 TeraDataBulkLoaderDialog.TbuildLibPath.Label=Tbuild Libs\:
-TeraDataBulkLoaderDialog.TdicuLibPath.Label=TDICU libs\:
+TeraDataBulkLoaderDialog.TdicuLibPath.Label=TDICU Libs\:
 TeraDataBulkLoaderDialog.CopLibPath.Label=COPLIB and COPERR\:
 TeraDataBulkLoaderDialog.DataFile.Label=FIFO Base Filename\:
 TeraDataBulkLoaderDialog.JobName.Label=Job Name\:
