[PDI-12188] - More ux finishing touches

--- a/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
@@ -30,7 +30,7 @@ TeraDataBulkLoaderMeta.Exception.ErrorGettingFields=Error in getting the fields
 TeraDataBulkLoaderMeta.Exception.ConnectionNotDefined=No connection defined
 TeraDataBulkLoaderMeta.Exception.OpenScriptFile=Cannot open script file at path={0}
 TeraDataBulkLoaderMeta.HiddenPassword=*** password hidden in preview ***
-TeraDataBulkLoaderMeta.NoInputStream=No input stream - disabled hop?
+TeraDataBulkLoaderMeta.NoInputStream=Preview Not Available.
 TeraDataBulkLoaderMeta.Exception.ErrorGettingFields=There was an error getting the columns from the table
 TeraDataBulkLoaderMeta.Exception.CannotFindFieldInInput=Unable to find field {0} in the input rows
 
@@ -88,13 +88,13 @@ TeraDataBulkLoaderDialog.GetFields.Button=Get Fields
 TeraDataBulkLoaderDialog.LogFile.Label=Error Log\:
 TeraDataBulkLoaderDialog.UseControlFile.Label=Use control file\:
 TeraDataBulkLoaderDialog.DoMapping.UnableToFindTargetFields.Title=Error
-TeraDataBulkLoaderDialog.DoMapping.UnableToFindTargetFields.Message=Unable to find target fields\!
+TeraDataBulkLoaderDialog.DoMapping.UnableToFindTargetFields.Message=Unable to find target fields\:
 TeraDataBulkLoaderDialog.GetFields.Label=Get Fields
 TeraDataBulkLoaderDialog.FailedToGetFields.DialogMessage=Failed to get fields\!
 TeraDataBulkLoaderDialog.FieldTableLength=Field table has length {0}
 
 TeraDataBulkLoader.Log.ErrorInStep=Error in step\:
-TeraDataBulkLoaderDialog.Shell.Title=Teradata TPT Insert Upsert Bulk Loader
+TeraDataBulkLoaderDialog.Shell.Title=Teradata TPT Bulk Loader
 TeraDataBulkLoaderDialog.Keys.Label=The Key(s) To Look Up In The Value(s)\:
 TeraDataBulkLoaderDialog.Fields.Label=Fields To Load\:
 
@@ -108,7 +108,7 @@ TeraDataBulkLoaderDialog.IgnoreMissing.Label=Ignore Missing
 # Folder tabs
 TeraDataBulkLoaderDialog.ScriptTab.Label=Job Script File
 TeraDataBulkLoaderDialog.ExecutionTab.Label=General
-TeraDataBulkLoaderDialog.GenerateScriptControlTab.Label=Job Script
+TeraDataBulkLoaderDialog.GenerateScriptControlTab.Label=Job Script Options
 TeraDataBulkLoaderDialog.GenerateScriptFieldsTab.Label=Keys and Fields
 TeraDataBulkLoaderDialog.GenScriptControlItemsDisable.Label=These items are disabled as "Use Existing Script" is selected
 TeraDataBulkLoaderDialog.GenScriptFieldsDisable.Label=These items are disabled as "Use Existing Script" is selected
