[PDI-11848] - Adding ability to decide whether to keep fifo filename as-is, setting variable with substituted value for use with existing scripts

--- a/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
@@ -122,7 +122,9 @@ TeraDataBulkLoaderDialog.TDLibPath.Label=Teradata Libs\:
 TeraDataBulkLoaderDialog.TbuildLibPath.Label=Tbuild Libs\:
 TeraDataBulkLoaderDialog.TdicuLibPath.Label=TDICU Libs\:
 TeraDataBulkLoaderDialog.CopLibPath.Label=COPLIB and COPERR\:
-TeraDataBulkLoaderDialog.DataFile.Label=FIFO Base Filename\:
+TeraDataBulkLoaderDialog.DataFile.Label=FIFO Base File Name\:
+TeraDataBulkLoaderDialog.DataFileRandomize.Label=Append Random Value to FIFO File Name\:
+TeraDataBulkLoaderDialog.DataFileRandomizeVariable.Label=* A variable called TPT_FIFO_FILENAME will be automatically populated
 TeraDataBulkLoaderDialog.JobName.Label=Job Name\:
 TeraDataBulkLoaderDialog.TbuildPath.Label=Tbuild Executable\:
 
