[PDI-11848] - Changing prompt text to orange, text to UX version

--- a/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
@@ -124,7 +124,7 @@ TeraDataBulkLoaderDialog.TdicuLibPath.Label=TDICU Libs\:
 TeraDataBulkLoaderDialog.CopLibPath.Label=COPLIB and COPERR\:
 TeraDataBulkLoaderDialog.DataFile.Label=FIFO Base File Name\:
 TeraDataBulkLoaderDialog.DataFileRandomize.Label=Append Random Value to FIFO File Name\:
-TeraDataBulkLoaderDialog.DataFileRandomizeVariable.Label=* A variable called TPT_FIFO_FILENAME will be automatically populated
+TeraDataBulkLoaderDialog.DataFileRandomizeVariable.Label=* A variable named TPT_FIFO_FILENAME will be automatically populated
 TeraDataBulkLoaderDialog.JobName.Label=Job Name\:
 TeraDataBulkLoaderDialog.TbuildPath.Label=Tbuild Executable\:
 
