[PDI-11848] - Creating dynamic tabs before size is calculated, validating that user selected to substitute variable if they are using an existing script and the fifo name is randomized

--- a/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
@@ -136,7 +136,8 @@ TeraDataBulkLoaderDialog.InvalidConnection.DialogMessage=Connection is required
 TeraDataBulkLoaderDialog.MissingLogTable.DialogMessage=Restart Log Table is required
 TeraDataBulkLoaderDialog.MissingTargetTable.DialogMessage=Target Table Name is required
 TeraDataBulkLoaderDialog.MissingSchema.DialogMessage=Schema Name is required
-TeraDataBulkLoaderDialog.MissingControlFile.DialogMessage=Script File is required
+TeraDataBulkLoaderDialog.MissingControlFile.DialogMessage=Control File is required
+TeraDataBulkLoaderDialog.FIFOState.DialogMessage=FIFO name will be randomized so the existing script requires variable substitution using $'{'TPT_FIFO_FILENAME'}' in order to work
 TeraDataBulkLoaderDialog.MissingInstallPath.DialogMessage=TeraData Client installation path is required
 
 TeraDataBulkLoaderDialog.DoMapping.SomeTargetFieldsNotFound=Some fields in the stream were not found in the table
