[PDI-11848] - UX Error dialog revisions

--- a/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
@@ -116,7 +116,7 @@ TeraDataBulkLoaderDialog.ControlFileDisable.Label=These items are disabled as "G
 # Execution Options
 TeraDataBulkLoaderDialog.LocationGroup.Label=Locations
 TeraDataBulkLoaderDialog.OtherGroup.Label=Other
-TeraDataBulkLoaderDialog.TdInstall.Label=TeraData Client Installation\:
+TeraDataBulkLoaderDialog.TdInstall.Label=Teradata Client Installation\:
 TeraDataBulkLoaderDialog.TwbRoot.Label=TWB_ROOT\:
 TeraDataBulkLoaderDialog.TDLibPath.Label=Teradata Libs\:
 TeraDataBulkLoaderDialog.TbuildLibPath.Label=Tbuild Libs\:
@@ -129,15 +129,15 @@ TeraDataBulkLoaderDialog.JobName.Label=Job Name\:
 TeraDataBulkLoaderDialog.TbuildPath.Label=Tbuild Executable\:
 
 # Errors for missing required fields
-TeraDataBulkLoaderDialog.MissingRequiredTitle.DialogMessage=Missing Required Fields for this Step
-TeraDataBulkLoaderDialog.MissingRequiredMsg.DialogMessage=Required information is missing for this step\:
+TeraDataBulkLoaderDialog.MissingRequiredTitle.DialogMessage=Error
+TeraDataBulkLoaderDialog.MissingRequiredMsg.DialogMessage=Required information is invalid or still needed\:
 TeraDataBulkLoaderDialog.MissingStepname.DialogMessage=Step Name is required
 TeraDataBulkLoaderDialog.InvalidConnection.DialogMessage=Connection is required
 TeraDataBulkLoaderDialog.MissingLogTable.DialogMessage=Restart Log Table is required
 TeraDataBulkLoaderDialog.MissingTargetTable.DialogMessage=Target Table Name is required
 TeraDataBulkLoaderDialog.MissingSchema.DialogMessage=Schema Name is required
 TeraDataBulkLoaderDialog.MissingControlFile.DialogMessage=Control File is required
-TeraDataBulkLoaderDialog.FIFOState.DialogMessage=FIFO name will be randomized so the existing script requires variable substitution using $'{'TPT_FIFO_FILENAME'}' in order to work
+TeraDataBulkLoaderDialog.FIFOState.DialogMessage=Substitute Kettle Variables in Control File must be checked
 TeraDataBulkLoaderDialog.MissingInstallPath.DialogMessage=TeraData Client installation path is required
 
 TeraDataBulkLoaderDialog.DoMapping.SomeTargetFieldsNotFound=Some fields in the stream were not found in the table
