[PDI-16888] Title bar of several steps doesn't have the correspondent name of the step

--- a/core/src/main/java/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
+++ b/core/src/main/java/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
@@ -94,7 +94,7 @@ TeraDataBulkLoaderDialog.FailedToGetFields.DialogMessage=Failed to get fields\!
 TeraDataBulkLoaderDialog.FieldTableLength=Field table has length {0}
 
 TeraDataBulkLoader.Log.ErrorInStep=Error in step\:
-TeraDataBulkLoaderDialog.Shell.Title=Teradata TPT Bulk Loader
+TeraDataBulkLoaderDialog.Shell.Title=Teradata TPT bulk loader
 TeraDataBulkLoaderDialog.Keys.Label=The Key(s) To Look Up In The Value(s)\:
 TeraDataBulkLoaderDialog.Fields.Label=Fields To Load\:
 
