[PDI-18073] Bulk Loading steps returning NPE if previous steps does not have rows
* [PDI-18073] Added .idea to .gitignore
* [PDI-18073] Added a database connection null check to verify that if someone fails to put in a database connection, the error log will state that's what is missing.
* [PDI-18073] Added no connection message.
* [PDI-18073] Added test cases to verify this check.

--- a/core/src/main/java/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
+++ b/core/src/main/java/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
@@ -20,6 +20,7 @@ TeraDataBulkLoader.Exception.TBuildProcessError=Tbuild process exited with code 
 TeraDataBulkLoader.Exception.IOError=IO Error serializing rows of data to the FIFO file
 TeraDataBulkLoader.Exception.UnknownError=Error serializing rows of data to the FIFO file
 TeraDataBulkLoaderMeta.Exception.UnableToSaveStepInfoToRepository=Unable to save to repository
+TeraDataBulkLoaderMeta.Exception.NoConnectionDefined=There is no connection defined in this step.
 
 # Meta class messages
 TeraDataBulkLoaderMeta.TbuildClientRoot=/opt/teradata/client/14.00
