--- a/core/src/main/resources/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
+++ b/core/src/main/resources/org/pentaho/di/trans/steps/teradatabulkloader/messages/messages_en_US.properties
@@ -20,6 +20,7 @@ TeraDataBulkLoader.Exception.TBuildProcessError=Tbuild process exited with code 
 TeraDataBulkLoader.Exception.IOError=IO Error serializing rows of data to the FIFO file
 TeraDataBulkLoader.Exception.UnknownError=Error serializing rows of data to the FIFO file
 TeraDataBulkLoaderMeta.Exception.UnableToSaveStepInfoToRepository=Unable to save to repository
+TeraDataBulkLoaderMeta.Exception.NoConnectionDefined=There is no connection defined in this step.
 
 # Meta class messages
 TeraDataBulkLoaderMeta.TbuildClientRoot=/opt/teradata/client/14.00
